kubernetes/apps/baohiemxe/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: baohiemxe
  labels:
    app.kubernetes.io/name: baohiemxe
    app.kubernetes.io/managed-by: flux
